Improved overall site and functionalities.

--- a/about.html
+++ b/about.html
@@ -20,8 +20,6 @@
                         <li><a href="mens.html">Men</a></li>
                         <li><a href="womens.html">Women</a></li>
                         <li><a href="sale.html">Sale</a></li>
-                        <li><a href="about.html" class="active">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
                 <div class="nav-icons">
@@ -84,5 +82,16 @@
             </div>
         </div>
     </footer>
+    
+    <script>
+        function toggleMenu() {
+            var menuItems = document.getElementById("menuItems");
+            if (menuItems.style.maxHeight) {
+                menuItems.style.maxHeight = null;
+            } else {
+                menuItems.style.maxHeight = menuItems.scrollHeight + "px";
+            }
+        }
+    </script>
 </body>
 </html>
