--- a/admin/index.html
+++ b/admin/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Login - LIVOST</title>
+    <title>Admin Login - LEEVOST</title>
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -88,7 +88,7 @@
 <body>
     <div class="login-container">
         <div class="login-header">
-            <h1>LIVOST Admin</h1>
+            <h1>LEEVOST Admin</h1>
             <p>Log in to manage your store</p>
         </div>
         
