--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - LIVOST</title>
+    <title>Login - LEEVOST</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -147,7 +147,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <h1>LIVOST</h1>
+                    <h1>LEEVOST</h1>
                 </div>
                 <nav>
                     <ul id="menuItems">
@@ -220,7 +220,7 @@
         <div class="container">
             <div class="footer-row">
                 <div class="footer-col">
-                    <h3>LIVOST</h3>
+                    <h3>LEEVOST</h3>
                     <p>Rising Fashion Brand in Bangladesh offering the best quality products with authenticity guarantee.</p>
                 </div>
                 <div class="footer-col">
@@ -252,7 +252,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 LIVOST. All Rights Reserved.</p>
+                <p>&copy; 2023 LEEVOST. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
