--- a/mens.html
+++ b/mens.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Men's Collection - LIVOST</title>
+    <title>Men's Collection - LEEVOST</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <h1>LIVOST</h1>
+                    <h1>LEEVOST</h1>
                 </div>
                 <nav>
                     <ul id="menuItems">
@@ -20,8 +20,6 @@
                         <li><a href="mens.html" class="active">Men</a></li>
                         <li><a href="womens.html">Women</a></li>
                         <li><a href="sale.html">Sale</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
                 <div class="nav-icons">
@@ -355,7 +353,7 @@
         <div class="container">
             <div class="footer-row">
                 <div class="footer-col">
-                    <h3>LIVOST</h3>
+                    <h3>LEEVOST</h3>
                     <p>Rising Fashion Brand in Bangladesh offering the best quality products with authenticity guarantee.</p>
                 </div>
                 <div class="footer-col">
@@ -387,7 +385,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 LIVOST. All Rights Reserved.</p>
+                <p>&copy; 2023 LEEVOST. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
